# engine

./: .gitignore  CMakeLists.txt
maps/: cube_sphere_test.json  test.json
models/: crosshair.blend  cube.blend  font.blend  ico_sphere.blend  monkey.blend  monkey_smooth2.blend  plane.blend  sources.txt  split_font_model.py  teapot.blend
shaders/: basic.frag.glsl  basic.vert.glsl  font.frag.glsl  font.vert.glsl  line.frag.glsl  line.vert.glsl  ui.frag.glsl  ui.vert.glsl
src/: Camera.cpp  Camera.h  FileCache.h  GameMap.cpp  GameMap.h  GameObject.cpp  GameObject.h  Logger.cpp  Logger.h  Model.cpp  Model.h  OverlayRenderer.cpp  OverlayRenderer.h  PhysicsDebugDraw.h  PhysicsWorld.cpp  PhysicsWorld.h  ShaderProgram.cpp  ShaderProgram.h  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Texture.h  assets.h  init.cpp  init.h  main.cpp  os.cpp  types.h
src/ui/: Button.cpp  Button.h  Container.cpp  Container.h  OverlayRenderer.cpp  OverlayRenderer.h  Widget.cpp  Widget.h  Window.cpp  Window.h  colors.h
textures/: sources.txt
